--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -21,13 +21,13 @@
 % SOFTWARE.
 
 \documentclass{article}
-\usepackage{../sqm}
+\usepackage{../lecture-notes.sty/lecture-notes}
 \newcommand*\thetitle{Tech Debt}
 \begin{document}
 
-\plush{\sqmTitlePage{14}{pvZDcytPU3w}}
+\plush{\lnTitlePage{14}{24}{pvZDcytPU3w}}
 
-\qte
+\lnQuote
   [Ward Cunningham]
   {ward-cunningham}
   {Shipping first time code is like going into \ul{debt}. A little debt speeds development so long as it is paid back promptly with a rewrite. The danger occurs when the debt is not repaid. Every minute spent on not-quite-right code counts as \ul{interest} on that debt.}
@@ -126,7 +126,7 @@ assert fibonacci(10) == 55;
 \includegraphics[width=.6\textwidth]{ticket.png}\par
 {\small Source: \url{https://github.com/objectionary/eo/issues/2700}\par}}
 
-\qte
+\lnQuote
   [Giancarlo Succi]
   {giancarlo-succi}
   {This paper presents the benefits of considering the entire backlog when prioritizing tasks. We employ an iterative approach using Particle Swarm Optimization to optimize a linear model with various preprocessing methods to determine the optimal model
