--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -21,11 +21,11 @@
 % SOFTWARE.
 
 \documentclass{article}
-\usepackage{../sqm}
+\usepackage{../lecture-notes.sty/lecture-notes}
 \newcommand*\thetitle{Code Style}
 \begin{document}
 
-\plush{\sqmTitlePage{22}{hPZGoEAXwY0}}
+\plush{\lnTitlePage{22}{24}{hPZGoEAXwY0}}
 
 \pptBanner{Which One \ul{Looks} Better for You?}
 \begin{pptWide}{3}
@@ -66,26 +66,26 @@ end
 \end{pptWide}
 \plush{}
 
-\qte
+\lnQuote
   [Brian Kernighan]
   {brian-kernighan}
   {The harder it is for people to \ul{grasp the intent} of any given section, the longer it will be before the program becomes \ul{operational}. Trying to outsmart a compiler defeats much of the purpose of using one. Write clearly --- \ul{don't sacrifice} clarity for `efficiency.'}
   {kernighan1974elements}
 
-\qte
+\lnQuote
   [David Marca]
   {david-marca}
   {The effective utilization of extra spaces, blank lines, or special characters can \ul{illuminate} the logical structure of a program. So we should not be afraid to: indent, indent consistently (3 is a readable minimum), start each statement on a new line, put only one word on a line, use extra pages to visually collect code, put blank lines between code, align keywords, separate code from comments with white space.}
   {marca1981some}
-\pitch{
+\lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=.7\linewidth]{pascal.png}
   \par\columnbreak\par
   ``The best style enforcer is the computer ... but \ul{only} if we can easily cope with its ever-present restrictions.''
-  \source{marca1981some}
+  \lnSource{marca1981some}
   \end{multicols}}
 
-\qte
+\lnQuote
   [Michael J. Rees]
   {michael-rees}
   {STYLE was designed to input the source of a syntactically correct Pascal program, make simple measurements on a one-pass line-by-line basis, and yield a style \ul{mark} out of 100\%.}
@@ -95,17 +95,17 @@ end
   \includegraphics[width=.95\linewidth]{rees-table.png}
   \par\columnbreak\par
   \includegraphics[width=.95\linewidth]{rees-curve.png}
-  \source{rees1982automatic}
+  \lnSource{rees1982automatic}
   \end{multicols}}
 
-\qte
+\lnQuote
   {../22-code-style/berry-meekings}
   {The `elegance' or `style' of a program is sometimes considered a nebulous attribute that is somehow unquantifiable; a programmer has an \ul{instinctive} feel for a `good' or a `bad' program in much the same way as an artist distinguishes good and bad paintings.}
   {berry1985style}
 \plush{\pptBanner{Berry-Meekings Score, for C Programs}
   \begin{multicols}{2}
   \includegraphics[width=.95\linewidth]{berry-score.png}
-  \source{berry1985style}
+  \lnSource{berry1985style}
   \par\columnbreak\par
   ``An individual score for each metric is determined by reference to the value in this table for
     \begin{enumerate}\setlength\itemsep{-.5em}
@@ -116,7 +116,7 @@ end
     \end{enumerate}
   \end{multicols}}
 
-\qte
+\lnQuote
   [Warren Harrison]
   {warren-harrison}
   {To determine the relationship (if any) between the style metric and error proneness of each module, we performed a simple correlation analysis. The results were discouraging in the sense that a correlation of only -0.052 existed between the observed error frequency and the style metric, suggesting that the style metric bore \ul{little relationship} to the error frequency encountered in our data.}
@@ -151,13 +151,13 @@ end
     \item \href{https://github.com/yegor256/xcop}{xcop} for XML
   \end{itemize}}
 
-\qte
+\lnQuote
   [Christian Collberg]
   {christian-collberg}
   {Code obfuscation means one user runs an application through an \ul{obfuscator}, a program that transforms the application into one that is functionally identical to the original but which is much more difficult for another user to understand.}
   {collberg1997taxonomy}
 
-\qte
+\lnQuote
   [Raymond Buse]
   {raymond-buse}
   {Formally, we can characterize software readability as a mapping from a code sample to a finite score domain. We presented human annotators with a sequence of short code selections, called snippets. The annotators were asked to individually score each snippet based on their personal estimation of readability. Our metric for readability is \ul{derived} (using ML) from these judgments.}
@@ -169,24 +169,24 @@ end
   \par\columnbreak\par
   ``We find, for example, that factors like 'average line length' and 'average number of identifiers per line' are very important to readability. Conversely, 'average
 identifier length' is not, in itself, a very predictive factor,''
-  \source{buse2009learning}
+  \lnSource{buse2009learning}
   \end{multicols}}
 
-\qte
+\lnQuote
   [Cathal Boogerd]
   {cathal-boogerd}
   {First, there are 9 out of 72 rules for which violations were observed that perform significantly better than a random predictor at locating fault-related lines. Second, we observed a negative correlation between MISRA rule violations and observed faults. In addition, 29 out of 72 rules had a zero true positive rate. This makes it possible that adherence to the MISRA standard \ul{as a whole} would have made the software \ul{less reliable}.}
   {boogerd2008assessing}
 
-\qte
+\lnQuote
   [Henry Ledgard]
   {henry-ledgard}
   {An individual's body language helps clarify the spoken word. In a similar sense, the programmer relies on \ul{white space}---what is not said directly---in the code to communicate logic, intent, and understanding.}
   {green2011coding}
-\pitch{\includegraphics[width=.95\linewidth]{three-ifs.png}
-  \source{green2011coding}}
+\lnPitch{\includegraphics[width=.95\linewidth]{three-ifs.png}
+  \lnSource{green2011coding}}
 
-\qte
+\lnQuote
   [Peter C. Rigby]
   {peter-rigby}
   {We list the reasons why our interviewees \ul{rejected} a patch or required further modification before accepting it:
@@ -198,35 +198,35 @@ identifier length' is not, in itself, a very predictive factor,''
     Use of incorrect API or library.}
   {rigby2011understanding}
 
-\qte
+\lnQuote
   [Vipin Balachandran]
   {vipin-balachandran}
   {Through a user study, we show that integrating static analysis tools (Checkstyle, PMD, and FindBugs) with code review process can improve the \ul{quality of code review}. The developer feedback for a subset of comments from automatic reviews shows that the developers agree to fix 93\% of all the automatically generated comments.}
   {balachandran2013reducing}
 
-\qte
+\lnQuote
   [Moritz Beller]
   {moritz-beller}
   {Most Automated Static Analysis Tools configurations deviate slightly from the \ul{default}, but hardly any introduce new custom analyses. }
   {beller2016analyzing}
-\pitch{\includegraphics[width=.9\linewidth]{configs.png}
-  \source{beller2016analyzing}}
-\pitch{\includegraphics[width=.7\linewidth]{custom.png}
-  \source{beller2016analyzing}}
+\lnPitch{\includegraphics[width=.9\linewidth]{configs.png}
+  \lnSource{beller2016analyzing}}
+\lnPitch{\includegraphics[width=.7\linewidth]{custom.png}
+  \lnSource{beller2016analyzing}}
 
-\qte
+\lnQuote
   [Fiorella Zampetti]
   {fiorella-zampetti}
   {Results indicate that build breakages due to static analysis tools are \ul{mainly} related to adherence to coding standards, and there is also some attention to missing licenses. Build failures related to tools identifying potential bugs or vulnerabilities occur \ul{less frequently}, and in some cases such tools are activated in a `softer' mode, without making the build fail.}
   {zampetti2017open}
 
-\qte
+\lnQuote
   [Jennifer Bauer]
   {jennifer-bauer}
   {While the perceptual processing of code is required to understand it, \ul{higher level processing}, such as understanding its semantics and reasoning about its functionality, affect program comprehensibility more strongly. The influence of indentation could have been masked by these side effects, so it might well be that the effect of indentation comes more into play when the code is \ul{longer} and \ul{more complex}.}
   {bauer2019indentation}
 
-\qte
+\lnQuote
   [Weiqin Zou]
   {weiqin-zou}
   {A pull request that is \ul{consistent} with the current code style tends to be merged into the codebase more \ul{easily} (faster).}
