--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -48,7 +48,7 @@
   {coleman1994}
 
 \lnQuote
-  {../05-maintainability-index/paper-1}
+  {paper-1}
   {The factors of software that determine or influence maintainability can be organized into a \ul{hierarchical} structure of measurable attribute. Our hierarchy serves as a taxonomic definition for software maintainability that is compatible with the 35 published works upon which it is based.}
   {oman1992metrics}
 
@@ -68,8 +68,8 @@
 }
 
 \lnQuote
-  {../05-maintainability-index/paper-2}
-  {A software maintainability model is only useful if it can provide developers and maintainers in an industrial setting with more information about the system}
+  {paper-2}
+  {A software maintainability model is only useful if it can provide developers and maintainers in an industrial setting with more information about the system.}
   {coleman1994}
 
 \plush{
@@ -131,7 +131,7 @@
 
 \lnQuote
   [Tja\u{s}a Heri\u{c}ko]
-  {../05-maintainability-index/hericko}
+  {hericko}
   {When comparing maintainability measurements from several Index variants, the perception of maintainability could be impacted by the choice of the Index variant used.}
   {hericko2023}
 
@@ -146,7 +146,7 @@
 \end{itemize}}
 
 \lnQuote
-  {../05-maintainability-index/slr}
+  {slr}
   {The SLR outcome provided us with \ul{174 software metrics}, among which we identified a set of 15 most commonly mentioned ones, and 19 metric computation tools available to practitioners.}
   {ardito2022}
 
